# morpho

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  post.rs  settings.rs  static_handler.rs  tag.rs  theme.rs  utils.rs
src/demo_templates/: hello.md.tpl  math.md.tpl
src/simple_theme/simple/static/: main.css  main.styl
src/simple_theme/simple/templates/: base.tpl  post.tpl
src/simple_theme/static/: main.css  main.styl
src/simple_theme/templates/: base.tpl  index.tpl  tag.tpl
