[package]
name = "morpho"
version = "0.18.3"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>","FuGangqiang <fu_gangqiang@qq.com>"]
description = "magnusi-improved version of mdblog"
repository = "https://github.com/luciusmagn/morpho"
homepage = "https://github.com/luciusmagn/morpho"
documentation = "https://docs.rs/morpho"
keywords = ["blog", "markdown", "static", "site", "generator"]
categories = ["command-line-utilities"]
license = "Fair"
readme = "README.md"
edition = "2018"

[[bin]]
name = "morpho"
doc = false

[dependencies]
log = "0.4"
env_logger = "0.7"
argh = "0.1"
derive_more = { version = "0.99", features = ["display", "from"]}
pulldown-cmark = "0.6"
serde = { version = "1.0", features = ["rc", "std", "derive"]}
toml = "0.5"
tera = "1.0"
walkdir = "2.2"
tempfile = "3"
open = "1.3"
notify = "4.0"
glob = "0.3"
shellexpand = "1.0"
chrono = { version = "0.4", features = ["serde"] }
conduit-mime-types = "0.7"
conduit = "0.9.0-alpha"
civet = "0.12.0-alpha"
